# TRACE

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  annotation.py  app.py  cli.py  constraints.txt  pyproject.toml  requirements.txt
.github/workflows/: test.yml
.streamlit/: config.toml
benchmarks/: README.md  check_pc_threshold.py  compare_results.py  extract_qc_data.py  install_r_packages.R  make_qc_data.sh  reproduce.sh  rerun_downstream_demo.py  rerun_global_gwas.py  rerun_trace_farmcpu.py  rerun_trace_mlm.py  run_all_benchmarks.R  run_farmcpu_benchmarks.py  run_gapit.R  run_gapit_farmcpu.R  run_rmvp.R
benchmarks/plink_qc/: compare_qc.py  qc_concordance.csv  test_tomato_locule_number.mindrem.id
benchmarks/plots/: manhattan_comparison.py  pvalue_scatter.py
benchmarks/simulation/: evaluate_chr_lambda.py  evaluate_qtn_recovery.py  evaluate_simulation.py  plot_pipeline_analysis.py  plot_simulation.py  run_all_simulations.py  run_gapit_batch.py  run_simulation_autopc.py  run_simulation_gapit.R  run_simulation_gapit_farmcpu.R  run_simulation_platform.py  run_simulation_rmvp.R  simulate_phenotypes.py
benchmarks/simulation/sim_summary/: bonferroni_results.csv  chr_specific_lambda.csv  fp_chromosomal_summary.csv  null_lambda_gc.csv  null_type1_error.csv  power_fdr_summary_ci.csv  qtn_set_differences.csv  window_sensitivity.csv
data/: ITAG4.0_annotation.txt  SL3.1_descriptions.txt  Sol_genes.csv  Sol_genes_SL3.csv  cann_gene_annotation.txt  cann_gene_model.csv
examples/: README.md  example_pheno.csv  run_example.sh  simulate_example.py
gwas/: haplotype.py  io.py  kinship.py  ld.py  models.py  plotting.py  qc.py  reports.py  stability.py  subsampling.py  utils.py
gwas/templates/: report.html.j2
pages/: GWAS_analysis.py  LD_Analysis.py  z_Help.py
pages/_ld_tabs/: __init__.py  tab_block_heatmaps.py  tab_decay.py  tab_gene_annotation.py  tab_genome_wide.py  tab_local_ld.py
tests/: conftest.py  test_annotation.py  test_cli.py  test_cli_e2e.py  test_gwas_integration.py  test_haplotype.py  test_info_scores.py  test_io.py  test_kinship.py  test_ld.py  test_models.py  test_null_calibration.py  test_pipeline_stages.py  test_plotting_stats.py  test_qc.py  test_reports.py  test_stability.py  test_subsampling.py  test_upload_edge_cases.py  test_utils.py
utils/: pub_theme.py  species_files.py
